<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AppGuide">

    <!-- Summary Section -->
    <TextView
        android:id="@+id/guid_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_summary"
        android:layout_marginBottom="16dp"/>

    <!-- How to Section -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_step_1"
        android:layout_marginBottom="16dp"/>

</LinearLayout>