<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.datadissolve.DataDissolveActivity">

    <Button
        android:id="@+id/FilePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_file_default"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/gutmannDissolveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me_gutmann"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp" />

    <Button
        android:id="@+id/dodDissolveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me_dod"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/schneierDissolveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me_schneier"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="285dp" />

</androidx.constraintlayout.widget.ConstraintLayout>